@@ -282,6 +282,11 @@ CONFIG_EXAMPLE_NETTEST_NETMASK=(255<<24|255<<16|255<<8|0)
 CONFIG_EXAMPLE_NETTEST_CLIENTIP=(192<<24|168<<16|0<<8|106)
 
 #
+# Settings for examples/ostest
+CONFIG_EXAMPLES_OSTEST_LOOPS=100
+CONFIG_EXAMPLES_OSTEST_STACKSIZE=8192
+
+#
 # Settings for examples/nsh
 CONFIG_EXAMPLES_NSH_TELNET=n
 CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE=512
